[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://images/godot game jam.png" type="Texture" id=2]
[ext_resource path="res://scripts/Welcome.gd" type="Script" id=3]
[ext_resource path="res://images/symbols/symbol2.png" type="Texture" id=4]
[ext_resource path="res://images/symbols/symbol3.png" type="Texture" id=5]
[ext_resource path="res://images/symbols/symbol1.png" type="Texture" id=6]
[ext_resource path="res://images/symbols/symbol4.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[node name="Welcome" type="Node2D"]
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1280.0
margin_bottom = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 743.0

[node name="Label" type="Label" parent="PanelContainer/Panel"]
margin_left = 1.0
margin_top = 33.0
margin_right = 1266.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Wakizoids - Connection"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelContainer/Panel"]
margin_left = 1.0
margin_top = 113.0
margin_right = 1265.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 2 )
text = "another game in the Wakizoids universe by Pete Goodwin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="godot game jam" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 633, 409 )
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 233.0
margin_top = 681.0
margin_right = 377.0
margin_bottom = 727.0
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/Panel"]
margin_left = 81.0
margin_top = 297.0
margin_right = 289.0
margin_bottom = 521.0
custom_fonts/normal_font = SubResource( 4 )
text = "Collect
The
Symbols,

Make
The
Connection,"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/Panel"]
margin_left = 993.0
margin_top = 297.0
margin_right = 1185.0
margin_bottom = 521.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]Send
The
Message,

Prevent
The
War[/right]"
text = "Send
The
Message,

Prevent
The
War"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="symbol1" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 145, 209 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="symbol2" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 1113, 217 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="symbol3" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 145, 593 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="symbol4" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 1113, 593 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="ReadmeButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 417.0
margin_top = 681.0
margin_right = 575.0
margin_bottom = 727.0
custom_fonts/font = SubResource( 5 )
text = "Readme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="CheckButton" parent="PanelContainer/Panel"]
margin_left = 617.0
margin_top = 681.0
margin_right = 793.0
margin_bottom = 721.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXButton" type="CheckButton" parent="PanelContainer/Panel"]
margin_left = 825.0
margin_top = 681.0
margin_right = 1049.0
margin_bottom = 721.0
custom_fonts/font = SubResource( 7 )
pressed = true
text = "Sound FX"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelContainer/Panel/StartButton" to="." method="on_start_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/ReadmeButton" to="." method="on_readme_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/MusicButton" to="." method="on_music_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/SFXButton" to="." method="on_SFX_pressed"]
